# MnemoScope

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  xsirpo.md
.github/workflows/: deploy-pages.yml  release.yml
dist-installers/: README.md  SHA256SUMS.txt
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs
src/app/: App.tsx
src/assets/brand/: README.md
src/components/brand/: Logo.tsx
src/components/capture/: CaptureComposer.tsx  FileDropZone.tsx  VoiceCapture.tsx
src/components/export/: ProjectBriefDialog.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TopCommandBar.tsx
src/components/memory/: MemoryCard.tsx  MemoryDetailDrawer.tsx  MemoryTypeBadge.tsx
src/components/timeline/: TimelineDayGroup.tsx
src/components/ui/: EmptyState.tsx  GlassPanel.tsx
src/features/capture/: CaptureView.tsx
src/features/home/: HomeView.tsx
src/features/projects/: ProjectsView.tsx
src/features/search/: SearchView.tsx
src/features/settings/: SettingsView.tsx
src/features/timeline/: TimelineView.tsx
src/lib/ai/: localFallback.ts  provider.ts
src/lib/import/: extractFile.ts
src/lib/memory/: demoData.ts  repository.ts  types.ts
src/stores/: useMemoryStore.ts  usePreferencesStore.ts
src/styles/: global.css
