[package]
name = "mnemoscope"
version = "0.1.0"
description = "A cinematic local-first memory timeline"
authors = ["hasnain7abbas"]
edition = "2021"

[lib]
name = "mnemoscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
